--- a/build_your_own_lisp.org
+++ b/build_your_own_lisp.org
@@ -31,7 +31,7 @@
   - Compiler
     - Clang and/or gcc for linux
 
-      #+begin_src sh :results verbatim
+      #+begin_src sh :results verbatim :exports both
         gcc --version
       #+end_src
 
@@ -42,7 +42,7 @@
       : warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
       : 
 
-      #+begin_src sh :results verbatim
+      #+begin_src sh :results verbatim :exports both
         clang --version
       #+end_src
 
@@ -53,7 +53,7 @@
 
     - mingw-gcc and wine for windows
       
-      #+begin_src sh :results verbatim
+      #+begin_src sh :results verbatim :exports both
         i686-w64-mingw32-gcc --version
       #+end_src
 
