--- a/build_your_own_lisp.org
+++ b/build_your_own_lisp.org
@@ -31,7 +31,7 @@
   - Compiler
     - Clang and/or gcc for linux
 
-      #+begin_src sh :results verbatim :exports both
+      #+begin_src sh :results verbatim :exports both -n
         gcc --version
       #+end_src
 
@@ -42,9 +42,10 @@
       : warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
       : 
 
-      #+begin_src sh :results verbatim :exports both
+      #+begin_src sh :results verbatim :exports both -n
         clang --version
       #+end_src
+
 
       #+RESULTS:
       : clang version 3.3 (tags/RELEASE_33/final)
@@ -53,7 +54,7 @@
 
     - mingw-gcc and wine for windows
       
-      #+begin_src sh :results verbatim :exports both
+      #+begin_src sh n:results verbatim :exports both -n
         i686-w64-mingw32-gcc --version
       #+end_src
 
@@ -71,20 +72,20 @@
     - Emacs Ofcourse! (Might spend some time in setting up configuration for C development)
 
 
-** 01.Baby First Steps
+** Baby First Steps
 
    The ubiquituos Hello World
-   #+begin_src C :tangle byol/hello_world.c :results verbatim :exports both
+   #+begin_src C :tangle byol/hello_world.c :results verbatim :exports both -n
      #include <stdio.h>
 
      int main(int argc, char** argv){
-       puts("Hello, World from Org and C!");
+       puts("Hello, World from Org and C language!");
        return 0;
      }
    #+end_src 
 
    #+RESULTS:
-   : Hello, World from Org and C!
+   : Hello, World from Org and C language!
 
 *** Learnings
     - It seems like org mode is already hooked to gcc so no need to setup a seperate compiler for now.
