Cleaned up file for repeated entries.

--- a/build_your_own_lisp.org
+++ b/build_your_own_lisp.org
@@ -121,261 +121,6 @@
    : Hello, World!
 
    Now we have an executable located at ./byol/hello_world.c. Lets start gdb session
-*** Learnings
-    - It seems like org mode is already hooked to gcc so no need to setup a separate compiler for now.
-    - Always set :results verbatim.
-    - Github org-mode support is pretty basic and doesn't support TOC, Section numbering
-    - /#+OPTIONS/ flag for supporting various export settings
-*** Questions
-    - There is no executable. Where is the path for tmp executable?
-    - What will happen when you have a prompt like infinite loop?
-    - Which compiler is being used?
-    - How can I add a cell number to source blocks? Something like In[num], Out[num]
-    - Some custom formatting for Result and src block for different languages during export?
-    - How can I setup flag / org-mode setting to evaluate all source blocks during export to html?
-*** Ideas
-    - Write a lisp function to use llvm instead of gcc(or vice versa)
-    - Function should also provide information about size of executable.
-    - Learn some gdb and lldb. Can't think of a way to do it in Org mode
-      as of now?
-
-** Brief Enncounter with GDB
-   Lets' build the bugger and have a walkthrough of gdb commands.
-
-   #+begin_src sh :results verbatim :session :exports both 
-    cd byol
-    gcc -g -std=c11 -Wall hello_world.c -o hello_world
-    ./hello_world
-   #+end_src
-
-   #+RESULTS:
-   : Hello, World!
-
-   Now we have an executable located at ./byol/hello_world.c. Lets start gdb session
-
-*** Learnings
-    - It seems like org mode is already hooked to gcc so no need to setup a separate compiler for now.
-    - Always set :results verbatim.
-    - Github org-mode support is pretty basic and doesn't support TOC, Section numbering
-    - /#+OPTIONS/ flag for supporting various export settings
-*** Questions
-    - There is no executable. Where is the path for tmp executable?
-    - What will happen when you have a prompt like infinite loop?
-    - Which compiler is being used?
-    - How can I add a cell number to source blocks? Something like In[num], Out[num]
-    - Some custom formatting for Result and src block for different languages during export?
-    - How can I setup flag / org-mode setting to evaluate all source blocks during export to html?
-*** Ideas
-    - Write a lisp function to use llvm instead of gcc(or vice versa)
-    - Function should also provide information about size of executable.
-    - Learn some gdb and lldb. Can't think of a way to do it in Org mode
-      as of now?
-
-** Brief Enncounter with GDB
-   Lets' build the bugger and have a walkthrough of gdb commands.
-
-   #+begin_src sh :results verbatim :session :exports both 
-    cd byol
-    gcc -g -std=c11 -Wall hello_world.c -o hello_world
-    ./hello_world
-   #+end_src
-
-   #+RESULTS:
-   : Hello, World!
-
-   Now we have an executable located at ./byol/hello_world.c. Lets start gdb session
-
-*** Learnings
-    - It seems like org mode is already hooked to gcc so no need to setup a separate compiler for now.
-    - Always set :results verbatim.
-    - Github org-mode support is pretty basic and doesn't support TOC, Section numbering
-    - /#+OPTIONS/ flag for supporting various export settings
-*** Questions
-    - There is no executable. Where is the path for tmp executable?
-    - What will happen when you have a prompt like infinite loop?
-    - Which compiler is being used?
-    - How can I add a cell number to source blocks? Something like In[num], Out[num]
-    - Some custom formatting for Result and src block for different languages during export?
-    - How can I setup flag / org-mode setting to evaluate all source blocks during export to html?
-*** Ideas
-    - Write a lisp function to use llvm instead of gcc(or vice versa)
-    - Function should also provide information about size of executable.
-    - Learn some gdb and lldb. Can't think of a way to do it in Org mode
-      as of now?
-
-** Brief Enncounter with GDB
-   Lets' build the bugger and have a walkthrough of gdb commands.
-
-   #+begin_src sh :results verbatim :session :exports both 
-    cd byol
-    gcc -g -std=c11 -Wall hello_world.c -o hello_world
-    ./hello_world
-   #+end_src
-
-   #+RESULTS:
-   : Hello, World!
-
-   Now we have an executable located at ./byol/hello_world.c. Lets start gdb session
-
-*** Learnings
-    - It seems like org mode is already hooked to gcc so no need to setup a separate compiler for now.
-    - Always set :results verbatim.
-    - Github org-mode support is pretty basic and doesn't support TOC, Section numbering
-    - /#+OPTIONS/ flag for supporting various export settings
-*** Questions
-    - There is no executable. Where is the path for tmp executable?
-    - What will happen when you have a prompt like infinite loop?
-    - Which compiler is being used?
-    - How can I add a cell number to source blocks? Something like In[num], Out[num]
-    - Some custom formatting for Result and src block for different languages during export?
-    - How can I setup flag / org-mode setting to evaluate all source blocks during export to html?
-*** Ideas
-    - Write a lisp function to use llvm instead of gcc(or vice versa)
-    - Function should also provide information about size of executable.
-    - Learn some gdb and lldb. Can't think of a way to do it in Org mode
-      as of now?
-
-** Brief Enncounter with GDB
-   Lets' build the bugger and have a walkthrough of gdb commands.
-
-   #+begin_src sh :results verbatim :session :exports both 
-    cd byol
-    gcc -g -std=c11 -Wall hello_world.c -o hello_world
-    ./hello_world
-   #+end_src
-
-   #+RESULTS:
-   : Hello, World!
-
-   Now we have an executable located at ./byol/hello_world.c. Lets start gdb session
-
-*** Learnings
-    - It seems like org mode is already hooked to gcc so no need to setup a separate compiler for now.
-    - Always set :results verbatim.
-    - Github org-mode support is pretty basic and doesn't support TOC, Section numbering
-    - /#+OPTIONS/ flag for supporting various export settings
-*** Questions
-    - There is no executable. Where is the path for tmp executable?
-    - What will happen when you have a prompt like infinite loop?
-    - Which compiler is being used?
-    - How can I add a cell number to source blocks? Something like In[num], Out[num]
-    - Some custom formatting for Result and src block for different languages during export?
-    - How can I setup flag / org-mode setting to evaluate all source blocks during export to html?
-*** Ideas
-    - Write a lisp function to use llvm instead of gcc(or vice versa)
-    - Function should also provide information about size of executable.
-    - Learn some gdb and lldb. Can't think of a way to do it in Org mode
-      as of now?
-
-** Brief Enncounter with GDB
-   Lets' build the bugger and have a walkthrough of gdb commands.
-
-   #+begin_src sh :results verbatim :session :exports both 
-    cd byol
-    gcc -g -std=c11 -Wall hello_world.c -o hello_world
-    ./hello_world
-   #+end_src
-
-   #+RESULTS:
-   : Hello, World!
-
-   Now we have an executable located at ./byol/hello_world.c. Lets start gdb session
-
-*** Learnings
-    - It seems like org mode is already hooked to gcc so no need to setup a separate compiler for now.
-    - Always set :results verbatim.
-    - Github org-mode support is pretty basic and doesn't support TOC, Section numbering
-    - /#+OPTIONS/ flag for supporting various export settings
-*** Questions
-    - There is no executable. Where is the path for tmp executable?
-    - What will happen when you have a prompt like infinite loop?
-    - Which compiler is being used?
-    - How can I add a cell number to source blocks? Something like In[num], Out[num]
-    - Some custom formatting for Result and src block for different languages during export?
-    - How can I setup flag / org-mode setting to evaluate all source blocks during export to html?
-*** Ideas
-    - Write a lisp function to use llvm instead of gcc(or vice versa)
-    - Function should also provide information about size of executable.
-    - Learn some gdb and lldb. Can't think of a way to do it in Org mode
-      as of now?
-
-** Brief Enncounter with GDB
-   Lets' build the bugger and have a walkthrough of gdb commands.
-
-   #+begin_src sh :results verbatim :session :exports both 
-    cd byol
-    gcc -g -std=c11 -Wall hello_world.c -o hello_world
-    ./hello_world
-   #+end_src
-
-   #+RESULTS:
-   : Hello, World!
-
-   Now we have an executable located at ./byol/hello_world.c. Lets start gdb session
-
-*** Learnings
-    - It seems like org mode is already hooked to gcc so no need to setup a separate compiler for now.
-    - Always set :results verbatim.
-    - Github org-mode support is pretty basic and doesn't support TOC, Section numbering
-    - /#+OPTIONS/ flag for supporting various export settings
-*** Questions
-    - There is no executable. Where is the path for tmp executable?
-    - What will happen when you have a prompt like infinite loop?
-    - Which compiler is being used?
-    - How can I add a cell number to source blocks? Something like In[num], Out[num]
-    - Some custom formatting for Result and src block for different languages during export?
-    - How can I setup flag / org-mode setting to evaluate all source blocks during export to html?
-*** Ideas
-    - Write a lisp function to use llvm instead of gcc(or vice versa)
-    - Function should also provide information about size of executable.
-    - Learn some gdb and lldb. Can't think of a way to do it in Org mode
-      as of now?
-
-** Brief Enncounter with GDB
-   Lets' build the bugger and have a walkthrough of gdb commands.
-
-   #+begin_src sh :results verbatim :session :exports both 
-    cd byol
-    gcc -g -std=c11 -Wall hello_world.c -o hello_world
-    ./hello_world
-   #+end_src
-
-   #+RESULTS:
-   : Hello, World!
-
-   Now we have an executable located at ./byol/hello_world.c. Lets start gdb session
-
-*** Learnings
-    - It seems like org mode is already hooked to gcc so no need to setup a separate compiler for now.
-    - Always set :results verbatim.
-    - Github org-mode support is pretty basic and doesn't support TOC, Section numbering
-    - /#+OPTIONS/ flag for supporting various export settings
-*** Questions
-    - There is no executable. Where is the path for tmp executable?
-    - What will happen when you have a prompt like infinite loop?
-    - Which compiler is being used?
-    - How can I add a cell number to source blocks? Something like In[num], Out[num]
-    - Some custom formatting for Result and src block for different languages during export?
-    - How can I setup flag / org-mode setting to evaluate all source blocks during export to html?
-*** Ideas
-    - Write a lisp function to use llvm instead of gcc(or vice versa)
-    - Function should also provide information about size of executable.
-    - Learn some gdb and lldb. Can't think of a way to do it in Org mode
-      as of now?
-
-** Brief Enncounter with GDB
-   Lets' build the bugger and have a walkthrough of gdb commands.
-
-   #+begin_src sh :results verbatim :session :exports both 
-    cd byol
-    gcc -g -std=c11 -Wall hello_world.c -o hello_world
-    ./hello_world
-   #+end_src
-
-   p#+RESULTS:
-   : Hello, World!
-
-   Now we have an executable located at ./byol/hello_world.c. Lets start gdb session
    #+begin_src sh :results verbatim :session :exports both
     gdb hello_world
    #+end_src
@@ -401,7 +146,7 @@
 
 *** Learnings
    - So interactive prompt doesn't work in org-mode. Need to use M-x gdb for going to gdb mode.
-   - gdb needs an executable which needs to be compiled before hand as above.
+   - gdb needs an executable which needs to be compiled before hand as above(gcc with -g flag)
    - Type gdb> run <filename> to load executable.
    - Type gdb> list to show source with line number.
    - Type gdb> break <line_num> to break at line number.
@@ -415,5 +160,5 @@
     - Later on try lldb in same way. Might need to install lldb interface to emacs.
     - Try this in more complicated example with Segfault.
     - Find out gdb debugging on emacs by watching some videos.
-
-
+      
+      
